# liulab-genome

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml
.claude/: settings.json
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: ci.yml  claude.yml  docs.yml  release.yml
docs/: aligner.md  genome-files.md  genome.md  index.md  reference.md  sequences.md  usage.md
skills/genome/: SKILL.md
src/genome/: __init__.py  cli.py  external.py  genome.py  metadata.py  region.py  seq.py
src/genome/aligner/: __init__.py  aligner.py  chromap.py  mixin.py  star.py
src/genome/data/: assembly_metadata.tsv
src/genome/io/: __init__.py  download.py  fasta.py  gtf.py  twobit.py  utils.py
tests/: conftest.py  test_aligner.py  test_cli.py  test_download.py  test_external.py  test_fasta.py  test_genome.py  test_gtf.py  test_region.py  test_seq.py  test_smoke.py  test_twobit.py  test_utils.py
