[project]
name = "liulab-genome"
description = "Handling reference genome related tasks."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
authors = [{ name = "Liu Lab" }]
keywords = ["bioinformatics", "genomics", "samtools", "bedtools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Typing :: Typed",
]
dynamic = ["version"]
dependencies = [
    "typer>=0.12",
    "pooch>=1.8",
    "requests>=2.31",
    "tqdm>=4",
    "numpy>=2",
    "pandas>=2.1,<3",
    "py2bit>=0.3",
]

[project.urls]
Homepage = "https://github.com/lhqing/liulab-genome"
Issues = "https://github.com/lhqing/liulab-genome/issues"
Changelog = "https://github.com/lhqing/liulab-genome/blob/main/CHANGELOG.md"

[project.scripts]
genome = "genome.cli:app"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0+dev"

[tool.hatch.build.targets.wheel]
packages = ["src/genome"]

# -------- pixi --------

[tool.pixi.workspace]
channels = ["conda-forge", "bioconda"]
platforms = ["osx-arm64", "linux-64", "osx-64"]

# Solve against the OLDEST glibc we need to support (CentOS/RHEL 7 = glibc 2.17)
# so the same lock file runs on both old and new Linux servers. Without this,
# the solver may pick packages requiring glibc >=2.28, which fail on old hosts.
[tool.pixi.system-requirements]
libc = "2.17"

# Editable install of this package into every env
[tool.pixi.pypi-dependencies]
liulab-genome = { path = ".", editable = true }

# Native runtime deps (shelled out to; never reimplemented)
[tool.pixi.dependencies]
samtools = "*"
bedtools = "*"
ucsc-fatotwobit = "*"
ucsc-twobitinfo = "*"
numpy = ">=2.4.6,<3"
pandas = ">=2.1,<3"
py2bit = ">=1.0.1,<2"
gffutils = ">=0.14,<0.15"

# Python version features
[tool.pixi.feature.py312.dependencies]
python = "3.12.*"
[tool.pixi.feature.py313.dependencies]
python = "3.13.*"

# Test feature
[tool.pixi.feature.test.dependencies]
pytest = "*"
pytest-cov = "*"
hypothesis = "*"

# Dev tooling feature
[tool.pixi.feature.dev.dependencies]
ruff = "*"
pyright = "*"
pre-commit = "*"
python-build = "*"
hatch-vcs = "*"
ipykernel = "*"   # lets the pixi env back a Jupyter kernel (notebook dev)

# Docs feature
[tool.pixi.feature.docs.dependencies]
mkdocs-material = "*"
mkdocstrings-python = "*"
ruff = "*"   # used by mkdocstrings to format rendered signatures

# Optional aligners (bioconda). Deliberately NOT in `default`: installation is
# only required when Genome.build_<aligner>_index() is called, and the aligner
# checks for itself at that point. Provision with `pixi add --feature star star`
# or by selecting the `aligners` environment.
[tool.pixi.feature.star.dependencies]
star = "*"

[tool.pixi.environments]
default    = { features = ["py313", "dev", "test", "docs"], solve-group = "default" }
aligners   = { features = ["py313", "dev", "test", "docs", "star"], solve-group = "default" }
test-py312 = { features = ["py312", "test"], solve-group = "py312" }
test-py313 = { features = ["py313", "test"], solve-group = "py313" }
docs       = { features = ["py313", "docs"], solve-group = "default" }

[tool.pixi.tasks]
lint      = "ruff check ."
fmt       = "ruff format ."
fmt-check = "ruff format --check ."
typecheck = "pyright"
test      = "pytest"
test-cov  = "pytest --cov=genome --cov-report=term-missing"
check     = { depends-on = ["lint", "fmt-check", "typecheck", "test"] }
build     = "python -m build"
docs      = "mkdocs serve"
# Register THIS env's Python as a Jupyter kernel (idempotent). Run once so a
# standalone Jupyter Lab can pick the "Python (liulab-genome)" kernel and import
# genome. Re-run after recreating the env (the kernelspec path changes).
register-kernel = "python -m ipykernel install --user --name liulab-genome --display-name \"Python (liulab-genome)\""

# -------- tool config (minimal in Phase 1; tightened in Phase 2) --------

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "PT",   # flake8-pytest-style
    "PTH",  # flake8-use-pathlib
    "N",    # pep8-naming
    "D",    # pydocstyle (numpy convention configured below)
    "RUF",  # ruff-specific
]
ignore = [
    "E501",  # line too long — formatter handles it
    "D203",  # one-blank-line-before-class (incompatible with D211)
    "D213",  # multi-line-summary-second-line (incompatible with D212)
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.flake8-bugbear]
# Typer uses call expressions (Option/Argument) as parameter defaults by design.
extend-immutable-calls = ["typer.Argument", "typer.Option"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "D",     # tests don't need full docstrings
    "S101",  # asserts are the whole point
]
"**/__init__.py" = [
    "D104",  # docstring on package init is optional
]

[tool.pyright]
include = ["src", "tests"]
exclude = ["**/__pycache__", "**/.pixi"]
venvPath = ".pixi/envs"
venv = "default"
pythonVersion = "3.12"
typeCheckingMode = "basic"
useLibraryCodeForTypes = true
reportMissingTypeStubs = "none"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = ["error"]

[tool.coverage.run]
branch = true
source = ["src/genome"]

[tool.coverage.report]
show_missing = true
exclude_also = [
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    '\.\.\.',
]
